--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -150,12 +150,12 @@
                 <a th:href="@{/login}" class="btn btn-secondary">Back</a>
             </div>
             <div th:if="${param.error}">
-                <div class="alert alert-danger col-xs-offset-1 col-xs-10 text-center">
+                <div class="alert alert-danger alert-dismissible fade show col-xs-offset-1 col-xs-10 text-center">
                     <em>User already exists.</em>
                 </div>
             </div>
             <div th:if="${param.success}">
-                <div class="alert alert-success col-xs-offset-1 col-xs-10 text-center">
+                <div class="alert alert-success alert-dismissible fade show col-xs-offset-1 col-xs-10 text-center">
                     <em>Successfully signed up!</em>
                 </div>
             </div>
