--- a/src/main/resources/templates/home/myCards.html
+++ b/src/main/resources/templates/home/myCards.html
@@ -136,9 +136,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: var(--bg-color);
             padding: 20px;
-            background-color: #303c44;
+            background-color: #384454;
         }
 
         .card img {
@@ -158,7 +157,7 @@
             /*padding: 20px;*/
             /*box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);*/
             box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-            background-color: #cccccc;
+            background-color: #ffffff;
             /*width: 300px;*/
             max-width: 100%;
             position: relative;
@@ -259,7 +258,7 @@
             <a class="delete-button" th:href="@{/home/cards/delete(id=${card.getId()})}">
                 <i class="fa fa-times" title="Remove card" aria-hidden="true"></i>
             </a>
-            <img src="https://www.debt.org/wp-content/uploads/2012/12/Credit-Card.gif" alt="Card Image">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/003/065/309/small_2x/credit-card-icon-flat-concept-illustration-free-vector.jpg" alt="Card Image">
             <div class="card-details">
                 <h2 th:text="${card.getName()}"></h2>
                 <hr>
@@ -287,7 +286,7 @@
         <div class="form-group">
 
             <label for="card-name">Card Name*</label>
-            <input type="text" th:value="${cardEdit != null} ? ${cardEdit.getName()}: ''" class="form-control" id="card-name" name="name" placeholder="Enter card name" required>
+            <input type="text" maxlength="20" th:value="${cardEdit != null} ? ${cardEdit.getName()}: ''" class="form-control" id="card-name" name="name" placeholder="Enter card name" required>
         </div>
         <div class="form-group dropdown">
             <label for="card-type">Card Type*</label>
@@ -322,7 +321,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="cvv">Security Code*</label>
-                <input type="text" th:value="${cardEdit} ? ${cardEdit.getCvv()}: ''" class="form-control" id="cvv" name="cvv" placeholder="Enter CVV" required>
+                <input type="text" th:value="${cardEdit} ? ${cardEdit.getCvv()}: ''" class="form-control" maxlength="3" id="cvv" name="cvv" placeholder="Enter CVV" required>
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
