--- a/src/main/resources/templates/home/flights.html
+++ b/src/main/resources/templates/home/flights.html
@@ -7,10 +7,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Search Flights</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" integrity="sha512-Q7oUJlu9XR9xVslbzeKMiS7R//bgLZfR5j5P5ZcBy20H5bXnq3iVjKTrj+c1mvQKut0c3LUvI0bnylL8FPKtDg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -18,8 +17,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js"
-            integrity="sha512-WJ61u4qiQFV2ymezFXoJU6oehu9XddOoyrGQrItTsaLjTwH2ivATljjgNUU0X6Uij1CbyGncK57zsB0wAs/XJw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
@@ -242,10 +239,57 @@
 
         let selectedFlights = [];
 
+        function sendReservationInfos(event) {
+            event.preventDefault();
+
+            const form = document.querySelector('#reservationForm');
+
+// Create a new FormData object and populate it with the form data
+            const formData = new FormData(form);
+
+            const myMap = new Map(Object.entries(searchParameters));
+
+            formData.set('myMap', JSON.stringify(Object.fromEntries(myMap.entries())));
+
+// Send the form data to the server using fetch
+            fetch('/flights/booking', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => {
+                    // Handle the response from the server
+                })
+                .catch(error => {
+                    // Handle any errors that occur during the request
+                });
+
+           /* const formDataObj = {};
+
+            for (let pair of formData.entries()) {
+                formDataObj[pair[0]] = pair[1];
+            }
+
+            formDataObj.searchParams = JSON.stringify(searchParameters);
+
+            // Code to send the request using fetch
+            fetch('/flights/booking', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body:  JSON.stringify(formDataObj)
+            })
+                .then(response => {
+                    // Handle the response
+                })
+                .catch(error => {
+                    // Handle the error
+                });
+*/
+        }
+
         function proceedReservation(flightId) {
             selectedFlights.push(flights.at(flightId - 1));
-
-
 
             if (searchParameters.returnDate.toString().length !== 0 && selectedFlights.length !== 2) {
                 document.getElementById("inbound").className = "";
@@ -271,9 +315,7 @@
                 document.getElementById("passengers").style.display = "block";
 
 
-
-                console.log(flightDetails);
-
+                setSelectedFlightDetailsToHiddenInput()
                 showDemoFlightTimes();
                 showTotal();
             }
@@ -282,20 +324,13 @@
         function setSelectedFlightDetailsToHiddenInput() {
             let flightDetails = "";
 
-            selectedFlights.forEach(flight => {
-                let details = Object.values(flight)
+            for (let i = 0; i < selectedFlights.length; i++) {
+                flightDetails += selectedFlights[i].flight_iata + "," + selectedFlights[i].dep_time +
+                    "," + selectedFlights[i].arr_time + "," + selectedFlights[i].duration + "," + selectedFlights[i].price + "/";
 
-                for (let i = 0; i < details.length; i++) {
-                    if (details[i] != null) {
-                        flightDetails += details[i] + ",";
-                    }
-                }
+            }
 
-                flightDetails += "/";
-            });
-
-            document.getElementById()
-
+            document.getElementById("flightDetails").value = flightDetails;
         }
 
         function showDemoFlightTimes() {
@@ -494,7 +529,7 @@
                 <a title="Cancel reservation" class="cancel-button btn pull pull-right font-weight-bold" onclick="showFlights()">
                     <i class="fa fa-times" aria-hidden="true"></i>
                 </a>
-                <form method="post" th:object="${passengers}">
+                <form id="reservationForm" onsubmit="sendReservationInfos(event)" method="post">
                     <div th:each="i : ${#numbers.sequence(1, searchParameters.get('passengers'))}" class="mt-3">
                         <h6 class="font-weight-bold" th:text="'Passenger ' + ${i}" style="color: #0e67e4"></h6>
 
@@ -528,11 +563,11 @@
                         <div class="form-row">
                             <div class="form-group col-md-12">
                                 <label class="font-weight-bold" for="phoneNumber">Phone Number:</label>
-                                <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" required>
+                                <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" class="form-control" required>
                             </div>
                         </div>
                     </div>
-                    <div class="form row pull pull-left mr-5">
+                    <div class="form-row pull pull-left mr-5">
                         <div class="align-middle text-center d-inline-block">
                             <input class="align-middle text-center" type="checkbox" id="hasExtraLuggage" name="hasExtraLuggage"/>
                             <label class="align-middle text-center mb-0 font-weight-bold" for="hasExtraLuggage"><img class="mb-1 ml-2 mr-1" src="https://www.turkishairlines.com/theme/img/icons/brand_right_checked_baggage.svg">Extra Luggage</label>
@@ -576,8 +611,8 @@
                                     <a th:href="@{/home/cards}" class="add-card-btn mt-2 mr-xl-4">Add a payment card</a>
                                 </div>
                             </th:block>
-                            <select th:if="${cards.size() > 0}" class="form-control text-center" id="select-card" style="font-size: 12px; font-weight: bold">
-                                <option th:each="card : ${cards}" th:value="${card.getNumber()}" th:text="${card.getName()} + ' - ending with ' + ${card.getNumber().substring(12)}"></option>
+                            <select th:if="${cards.size() > 0}" name="cardId" class="form-control text-center" id="select-card" style="font-size: 12px; font-weight: bold">
+                                <option th:each="card : ${cards}" th:value="${card.getId()}" th:text="${card.getName()} + ' - ending with ' + ${card.getNumber().substring(12)}"></option>
                             </select>
                         </div>
                         <div th:class="${searchParameters.get('flightType') == 'one-way'} ? 'pe-15 pe-0-web ws-nowrap ml-5 mt-2' : 'pe-15 pe-0-web ws-nowrap ml-2 mt-2'">
@@ -593,7 +628,7 @@
                             </div>
                         </div>
                         <div class="col-lg-2 ml-2">
-                            <button th:disabled="${cards.isEmpty()}" class="align-self-end btn pay-now pull pull-right" style="font-weight: bold" type="submit">Pay now<i class="fa fa-angle-right ml-5 mr-2 font-weight-bold" aria-hidden="true"></i></button>
+                            <button type="submit" id="payNowButton" th:disabled="${cards.isEmpty()}" class="align-self-end btn pay-now pull pull-right" style="font-weight: bold">Pay now<i class="fa fa-angle-right ml-5 mr-2 font-weight-bold" aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </form>
